Update Papyrus paper notes

--- a/papyrus/index.html
+++ b/papyrus/index.html
@@ -121,6 +121,12 @@
                 <div class="meta">2025 &middot; NeurIPS 2025 (39th Conference on Neural Information Processing Systems)</div>
                 <div class="tldr">LLaDA demonstrates that large-scale diffusion models (8B parameters) can match autoregressive LLMs like LLaMA3 on language tasks, proving that capabilities like scalability, in-context learning, and instruction-following are not unique to autoregressive models.</div>
             </article>
+            <article class="paper">
+                <h2><a href="universal-reasoning-model.html">Universal Reasoning Model</a></h2>
+                <div class="authors">Zitian Gao, Lynx Chen, Yihao Xiao, He Xing, Ran Tao, Haoming Luo, Joey Zhou, Bryan Dai</div>
+                <div class="meta">2025 &middot; arXiv preprint</div>
+                <div class="tldr">The Universal Reasoning Model (URM) achieves state-of-the-art performance on ARC-AGI benchmarks by showing that Universal Transformers' success comes from recurrent inductive bias and strong nonlinearity rather than complex architectures, and enhancing these properties with short convolutions and truncated backpropagation.</div>
+            </article>
         </div>
     </div>
 </body>
